[tool.poetry]
name = "streamlit-survey-form"
version = "0.1.0"
description = "an stremlit app for user to collect user input"
authors = ["gosienna <gosienna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.33.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
