[tool.poetry]
name = "streamlit-survey-form"
version = "0.1.0"
description = "an stremlit app for user to collect user input"
authors = ["gosienna <gosienna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7"
streamlit = "^1.33.0"
pandas = ">=1.3.0,<2"
st-gsheets-connection = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
